<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        app:cardBackgroundColor="@color/color_accent"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:contentPadding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/invited_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:theme="@style/time_label_text"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/invited_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/invited_event_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/invite_buttonbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" >

                <Button
                    android:id="@+id/accept_invite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accept_invite_label"
                    style="@style/invite_response_button" />

                <Button
                    android:id="@+id/maybe_invite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/maybe_invite_label"
                    style="@style/invite_response_button" />

                <Button
                    android:id="@+id/decline_invite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/decline_invite_label"
                    style="@style/invite_response_button" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>